@@ -2804,7 +2804,7 @@ sub generate_switchport_vlan_assignment {
                 return 0;
             }
 
-            my $newCorrectVlan = $vlan_obj->vlan_determine_for_node($mac, $switch, $ifIndex);
+            my $newCorrectVlan = $vlan_obj->fetchVlanForNode($mac, $switch, $ifIndex);
             if ( $newCorrectVlan eq "-1" ) {
                 $logger->error("unable to determine correct VLAN for $mac");
             } else {
